--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -3,33 +3,47 @@ p8105\_hw2\_jc4166
 Jerri Chen
 2019\_09\_23
 
-## R Markdown
+## Problem 1
 
-This is an R Markdown document. Markdown is a simple formatting syntax
-for authoring HTML, PDF, and MS Word documents. For more details on
-using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that
-includes both content as well as the output of any embedded R code
-chunks within the document. You can embed an R code chunk like this:
+The “Mr. Trash Wheel” sheet was read in from the
+“HealthyHarborWaterWheelTotals2018-7-28.xlsx” Excel file and variable
+names were cleaned. Rows and columns that did not contain
+dumpster-specific data were omitted, and for the variable
+“sports\_balls” the number was rounded to the nearest integer, and
+then converted to an integer variable.
 
 ``` r
-summary(cars)
+library(readxl)
+mr_trash_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "Mr. Trash Wheel") %>% 
+  janitor::clean_names() %>%
+  subset(dumpster != "NA") %>%
+  subset(select = -c(x15))
 ```
 
-    ##      speed           dist       
-    ##  Min.   : 4.0   Min.   :  2.00  
-    ##  1st Qu.:12.0   1st Qu.: 26.00  
-    ##  Median :15.0   Median : 36.00  
-    ##  Mean   :15.4   Mean   : 42.98  
-    ##  3rd Qu.:19.0   3rd Qu.: 56.00  
-    ##  Max.   :25.0   Max.   :120.00
+    ## New names:
+    ## * `` -> ...15
 
-## Including Plots
+Precipitation data for 2017 was read and cleaned, omitting rows without
+precipitation data and adding a variable “year”.
 
-You can also embed plots, for example:
+``` r
+library(readxl)
+precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "2017 Precipitation", range = "A2:B14") %>% 
+  janitor::clean_names() %>%
+  subset(total != "NA") %>%
+  mutate(year = "2017")
+```
 
-![](p8105_hw2_jc4166_files/figure-gfm/pressure-1.png)<!-- -->
+Precipitation data for 2018 was read and cleaned, omitting rows without
+precipitation data and adding a variable “year”.
 
-Note that the `echo = FALSE` parameter was added to the code chunk to
-prevent printing of the R code that generated the plot.
+``` r
+library(readxl)
+precipitation_2018_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "2018 Precipitation", range = "A2:B14") %>% 
+  janitor::clean_names() %>%
+  subset(total != "NA") %>%
+  mutate(year = "2018")
+```
+
+The 2017 and 2018 precipitation datasets were then combined, “month” was
+converted to a character variable.
