--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -23,8 +23,10 @@ mr_trash_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.
     ## New names:
     ## * `` -> ...15
 
-Precipitation data for 2017 was read and cleaned, omitting rows without
-precipitation data and adding a variable “year”.
+Precipitation data for 2017 and 2018 were read and cleaned, omitting
+rows without precipitation data and adding a variable “year”. Then, the
+2017 and 2018 precipitation datasets were then combined, and “month” was
+converted to a character variable.
 
 ``` r
 library(readxl)
@@ -32,18 +34,12 @@ precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7
   janitor::clean_names() %>%
   subset(total != "NA") %>%
   mutate(year = "2017")
-```
 
-Precipitation data for 2018 was read and cleaned, omitting rows without
-precipitation data and adding a variable “year”.
-
-``` r
-library(readxl)
 precipitation_2018_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "2018 Precipitation", range = "A2:B14") %>% 
   janitor::clean_names() %>%
   subset(total != "NA") %>%
   mutate(year = "2018")
-```
 
-The 2017 and 2018 precipitation datasets were then combined, “month” was
-converted to a character variable.
+precipitation_17_18_combined_data = 
+  left_join(precipitation_2017_data, precipitation_2018_data, by = "month")
+```
