--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -17,15 +17,13 @@ library(readxl)
 mr_trash_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "Mr. Trash Wheel") %>% 
   janitor::clean_names() %>%
   subset(dumpster != "NA") %>%
-  subset(select = -c(x15))
+  subset(select = -c(x15)) %>%
+  mutate(sports_balls = as.integer(round(sports_balls, digits = 0)))
 ```
-
-    ## New names:
-    ## * `` -> ...15
 
 Precipitation data for 2017 and 2018 were read and cleaned, omitting
 rows without precipitation data and adding a variable “year”. Then, the
-2017 and 2018 precipitation datasets were then combined, and “month” was
+2017 and 2018 precipitation datasets were combined, and “month” was
 converted to a character variable.
 
 ``` r
@@ -41,5 +39,18 @@ precipitation_2018_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7
   mutate(year = "2018")
 
 precipitation_17_18_combined_data = 
-  left_join(precipitation_2017_data, precipitation_2018_data, by = "month")
+  left_join(precipitation_2017_data, precipitation_2018_data, by = "month") %>%
+  mutate(month = month.name)
 ```
+
+The “precipitation\_17\_18\_combined\_data” dataset summarizes
+precipitation in inches for each month of 2017 and 2018. The data for
+2017 is complete as there are entries for each month (TRUE, 12
+observations total). The data for 2018 is not complete as several months
+are missing; there are TRUE, 7 observations total. The total
+precipitation for available months in 2018 is XXXX inches. The
+“mr\_trash\_wheel\_data” summarizes the types of objects that are
+collected by Mr. Trash Wheel. For example, in 2018, XXXX sports balls
+were collected in total.
+
+## Problem 2
