Yay figured out month.name

--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -40,12 +40,12 @@ precipitation_2018_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7
 
 precipitation_17_18_combined_data = 
   left_join(precipitation_2017_data, precipitation_2018_data, by = "month") %>%
-  mutate(month = month.name)
+  mutate(month = month.name[month])
 ```
 
 The “precipitation\_17\_18\_combined\_data” dataset summarizes
 precipitation in inches for each month of 2017 and 2018. The data for
-2017 is complete as there are entries for each month (TRUE, 12
+2017 is complete as there are entries for each month, (TRUE, 12
 observations total). The data for 2018 is not complete as several months
 are missing; there are TRUE, 7 observations total. The total
 precipitation for available months in 2018 is XXXX inches. The
@@ -54,3 +54,27 @@ collected by Mr. Trash Wheel. For example, in 2018, XXXX sports balls
 were collected in total.
 
 ## Problem 2
+
+Data from “pols-month.csv” was read in and cleaned.
+
+``` r
+pols_month_data = read_csv(file = "./data/pols-month.csv") %>%
+  janitor::clean_names() %>%
+  separate(col = mon, into = c("year", "month", "day"), sep = "-") %>%
+  mutate(month = month.name[as.numeric(month)]) %>% 
+  mutate(president = if_else(prez_gop == 1, "gop", "dem")) %>% 
+  select(-prez_gop, -prez_dem, -day)
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   mon = col_date(format = ""),
+    ##   prez_gop = col_double(),
+    ##   gov_gop = col_double(),
+    ##   sen_gop = col_double(),
+    ##   rep_gop = col_double(),
+    ##   prez_dem = col_double(),
+    ##   gov_dem = col_double(),
+    ##   sen_dem = col_double(),
+    ##   rep_dem = col_double()
+    ## )
