--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -66,15 +66,42 @@ pols_month_data = read_csv(file = "./data/pols-month.csv") %>%
   select(-prez_gop, -prez_dem, -day)
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   mon = col_date(format = ""),
-    ##   prez_gop = col_double(),
-    ##   gov_gop = col_double(),
-    ##   sen_gop = col_double(),
-    ##   rep_gop = col_double(),
-    ##   prez_dem = col_double(),
-    ##   gov_dem = col_double(),
-    ##   sen_dem = col_double(),
-    ##   rep_dem = col_double()
-    ## )
+Data from “snp.csv” was read in and cleaned.
+
+``` r
+snp_data = read_csv(file = "./data/snp.csv") %>% 
+  janitor::clean_names() %>%
+  separate(col = date, into = c("month", "day", "year"), sep = "/") %>% 
+  select("year", "month", "day", "close") %>% 
+  mutate(month = month.name[as.numeric(month)]) %>% 
+  select(-day) %>% 
+  rename(snp_close = close)
+```
+
+Data from “unemployment.csv” was read in and cleaned.
+
+``` r
+unemployment_data = read_csv(file = "./data/unemployment.csv") %>% 
+  janitor::clean_names()
+
+unemployment_data_tidy = 
+  pivot_longer(
+    unemployment_data,
+    jan:dec,
+    names_to = "month",
+    values_to = "percent_unempl") %>% 
+  mutate(month = case_when(
+    month == "jan" ~ "January",
+    month == "feb" ~ "February",
+    month == "mar" ~ "March",
+    month == "apr" ~ "April",
+    month == "may" ~ "May",
+    month == "jun" ~ "June",
+    month == "jul" ~ "July",
+    month == "aug" ~ "August",
+    month == "sep" ~ "September",
+    month == "oct" ~ "October",
+    month == "nov" ~ "November",
+    month == "dec" ~ "December"
+  ))
+```
