--- a/p8105_hw2_jc4166.Rmd
+++ b/p8105_hw2_jc4166.Rmd
@@ -68,7 +68,8 @@ snp_data = read_csv(file = "./data/snp.csv") %>%
 Data from "unemployment.csv" was read in and cleaned.
 ```{r eval = FALSE}
 unemployment_data = read_csv(file = "./data/unemployment.csv") %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  mutate(year = as.character(year))
 
 unemployment_data_tidy = 
   pivot_longer(
@@ -92,6 +93,38 @@ unemployment_data_tidy =
   ))
 ```
 
+Data from snp was merged into pols to form pols_snp_data, and then unemployment was merged into pols_snp_data to form pols_snp_unemployment_data.
 
+```{r eval = FALSE}
+pols_snp_data = 
+  left_join(pols_month_data, snp_data, by = c("year", "month"))
 
+pols_snp_unemployment_data = 
+  left_join(pols_snp_data, unemployment_data_tidy, by = c("year", "month"))
+```
+
+The pols_snp_unemployment_data dataset contains merged data from the pols_month, snp, and unemployment datasets. Each of the datasets had information delineated by dates, which was cleaned into "year" and "month" variables to be able to merge the datasets. pols_month had counts for the number of national politicians (governors, senators, representatives) of each party (gop or democrat) for each year and month from January 1947 to June 2015, and whether the president was gop or democrat. The snp dataset has the closing values of the S&P stock index by date from January 1950 to July 2015. The unemployment dataset has the percent unemployment for each month and year from January 1948 to December 2015. The resulting merged dataset (pols_snp_unemployment_data) is a tibble with 11 variables and 822 observations, though there is missing snp data from 1947 to 1949 and missing unemployment data from 1947. The data is otherwise complete until June 2015.
+
+## Problem 3
+
+Data from Popular_Baby_Names.csv was read in and cleaned.
+```{r eval = FALSE}
+baby_names_tidy = read.csv(file = "./data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  rename(name = child_s_first_name) %>% 
+  rename(year = year_of_birth) %>% 
+  mutate(name = tolower(name)) %>% 
+  mutate(gender = tolower(gender)) %>% 
+  mutate(ethnicity = tolower(ethnicity)) %>% 
+  mutate(ethnicity = case_when(
+    ethnicity == "asian and pacific islander" ~ "asian and pacific islander",
+    ethnicity == "asian and paci" ~ "asian and pacific islander",
+    ethnicity == "black non hispanic" ~ "black non hispanic",
+    ethnicity == "black non hisp" ~ "black non hispanic",
+    ethnicity == "white non hispanic" ~ "white non hispanic",
+    ethnicity == "white non hisp" ~ "white non hispanic"
+  ))
+```
+
+Create a table showing the rank in popularity of the name "Olivia" over time.
 
