--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -82,7 +82,8 @@ Data from “unemployment.csv” was read in and cleaned.
 
 ``` r
 unemployment_data = read_csv(file = "./data/unemployment.csv") %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  mutate(year = as.character(year))
 
 unemployment_data_tidy = 
   pivot_longer(
@@ -105,3 +106,56 @@ unemployment_data_tidy =
     month == "dec" ~ "December"
   ))
 ```
+
+Data from snp was merged into pols to form pols\_snp\_data, and then
+unemployment was merged into pols\_snp\_data to form
+pols\_snp\_unemployment\_data.
+
+``` r
+pols_snp_data = 
+  left_join(pols_month_data, snp_data, by = c("year", "month"))
+
+pols_snp_unemployment_data = 
+  left_join(pols_snp_data, unemployment_data_tidy, by = c("year", "month"))
+```
+
+The pols\_snp\_unemployment\_data dataset contains merged data from the
+pols\_month, snp, and unemployment datasets. Each of the datasets had
+information delineated by dates, which was cleaned into “year” and
+“month” variables to be able to merge the datasets. pols\_month had
+counts for the number of national politicians (governors, senators,
+representatives) of each party (gop or democrat) for each year and month
+from January 1947 to June 2015, and whether the president was gop or
+democrat. The snp dataset has the closing values of the S\&P stock index
+by date from January 1950 to July 2015. The unemployment dataset has the
+percent unemployment for each month and year from January 1948 to
+December 2015. The resulting merged dataset
+(pols\_snp\_unemployment\_data) is a tibble with 11 variables and 822
+observations, though there is missing snp data from 1947 to 1949 and
+missing unemployment data from 1947. The data is otherwise complete
+until June 2015.
+
+## Problem 3
+
+Data from Popular\_Baby\_Names.csv was read in and cleaned.
+
+``` r
+baby_names_tidy = read.csv(file = "./data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  rename(name = child_s_first_name) %>% 
+  rename(year = year_of_birth) %>% 
+  mutate(name = tolower(name)) %>% 
+  mutate(gender = tolower(gender)) %>% 
+  mutate(ethnicity = tolower(ethnicity)) %>% 
+  mutate(ethnicity = case_when(
+    ethnicity == "asian and pacific islander" ~ "asian and pacific islander",
+    ethnicity == "asian and paci" ~ "asian and pacific islander",
+    ethnicity == "black non hispanic" ~ "black non hispanic",
+    ethnicity == "black non hisp" ~ "black non hispanic",
+    ethnicity == "white non hispanic" ~ "white non hispanic",
+    ethnicity == "white non hisp" ~ "white non hispanic"
+  ))
+```
+
+Create a table showing the rank in popularity of the name “Olivia” over
+time.
