--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -14,11 +14,11 @@ then converted to an integer variable.
 
 ``` r
 library(readxl)
-mr_trash_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "Mr. Trash Wheel") %>% 
-  janitor::clean_names() %>%
+mr_trash_wheel_data = read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", sheet = "Mr. Trash Wheel") %>% 
+  janitor::clean_names() %>% 
   subset(dumpster != "NA") %>%
-  subset(select = -c(x15)) %>%
-  mutate(sports_balls = as.integer(round(sports_balls, digits = 0)))
+  subset(select = -c(x15, x16, x17)) %>%
+  mutate(sports_balls = as.integer(round(sports_balls, digits = 0))
 ```
 
 Precipitation data for 2017 and 2018 were read and cleaned, omitting
@@ -28,12 +28,12 @@ converted to a character variable.
 
 ``` r
 library(readxl)
-precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "2017 Precipitation", range = "A2:B14") %>% 
+precipitation_2017_data = read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", sheet = "2017 Precipitation", range = "A2:B14") %>% 
   janitor::clean_names() %>%
   subset(total != "NA") %>%
   mutate(year = "2017")
 
-precipitation_2018_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = "2018 Precipitation", range = "A2:B14") %>% 
+precipitation_2018_data = read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", sheet = "2018 Precipitation", range = "A2:B14") %>% 
   janitor::clean_names() %>%
   subset(total != "NA") %>%
   mutate(year = "2018")
@@ -47,7 +47,7 @@ The “precipitation\_17\_18\_combined\_data” dataset summarizes
 precipitation in inches for each month of 2017 and 2018. The data for
 2017 is complete as there are entries for each month, (TRUE, 12
 observations total). The data for 2018 is not complete as several months
-are missing; there are TRUE, 7 observations total. The total
+are missing; there are TRUE, 12 observations total. The total
 precipitation for available months in 2018 is XXXX inches. The
 “mr\_trash\_wheel\_data” summarizes the types of objects that are
 collected by Mr. Trash Wheel. For example, in 2018, XXXX sports balls
@@ -148,14 +148,57 @@ baby_names_tidy = read.csv(file = "./data/Popular_Baby_Names.csv") %>%
   mutate(gender = tolower(gender)) %>% 
   mutate(ethnicity = tolower(ethnicity)) %>% 
   mutate(ethnicity = case_when(
-    ethnicity == "asian and pacific islander" ~ "asian and pacific islander",
-    ethnicity == "asian and paci" ~ "asian and pacific islander",
-    ethnicity == "black non hispanic" ~ "black non hispanic",
-    ethnicity == "black non hisp" ~ "black non hispanic",
-    ethnicity == "white non hispanic" ~ "white non hispanic",
-    ethnicity == "white non hisp" ~ "white non hispanic"
-  ))
+    ethnicity == "asian and pacific islander" ~ "Asian and Pacific Islander",
+    ethnicity == "asian and paci" ~ "Asian and Pacific Islander",
+    ethnicity == "black non hispanic" ~ "Black Non-Hispanic",
+    ethnicity == "black non hisp" ~ "Black Non-Hispanic",
+    ethnicity == "white non hispanic" ~ "White Non-Hispanic",
+    ethnicity == "white non hisp" ~ "White Non-Hispanic",
+    ethnicity == "hispanic" ~ "Hispanic"
+  )) %>% 
+  distinct()
 ```
 
 Create a table showing the rank in popularity of the name “Olivia” over
 time.
+
+``` r
+name_olivia = baby_names_tidy %>% 
+  select(year, ethnicity, name, rank) %>% 
+  filter(name == "olivia")
+```
+
+To make the above table easier to view, I will “untidy” it for
+presentation. This table will show the year, and the rank of the name
+“Olivia” in each ethnicity category.
+
+``` r
+olivia_rank =
+  pivot_wider(
+    name_olivia,
+    names_from = "year",
+    values_from = "rank"
+  ) %>% 
+  select(-name) %>% 
+  select ("ethnicity", "2011", "2012", "2013", "2014", "2015", "2016")
+```
+
+Rank in popularity of male names for white non-hsipanic children in
+2016.
+
+``` r
+male_wnh_2016 = baby_names_tidy %>% 
+  filter(
+    year == "2016",
+    gender == "male",
+    ethnicity == "White Non-Hispanic"
+         ) %>% 
+  select(-year, -gender, -ethnicity)
+```
+
+Plot of male\_wnh\_2016 data.
+
+``` r
+ggplot(male_wnh_2016, aes(x = rank, y = count)) + 
+  geom_point()
+```
