--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -43,15 +43,13 @@ precipitation_17_18_combined_data =
   mutate(month = month.name[month])
 ```
 
-The “precipitation\_17\_18\_combined\_data” dataset summarizes
-precipitation in inches for each month of 2017 and 2018. The data for
-2017 is complete as there are entries for each month, (TRUE, 12
-observations total). The data for 2018 is not complete as several months
-are missing; there are TRUE, 12 observations total. The total
-precipitation for available months in 2018 is XXXX inches. The
-“mr\_trash\_wheel\_data” summarizes the types of objects that are
-collected by Mr. Trash Wheel. For example, in 2018, XXXX sports balls
-were collected in total.
+``` r
+median_2017= 
+  filter(mr_trash_wheel_data, year == "2017")
+
+median_2017_sports_balls = 
+  median(pull(median_2017, sports_balls))
+```
 
 ## Problem 2
 
