--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -51,6 +51,10 @@ median_2017_sports_balls =
   median(pull(median_2017, sports_balls))
 ```
 
+The “precipitation\_17\_18\_combined\_data” dataset summarizes
+precipitation in inches for each month of 2017 and 2018. The total
+precipitation for 2017 32.93 and for 2018 is 70.33 inches.
+
 ## Problem 2
 
 Data from “pols-month.csv” was read in and cleaned.
