Problem 3 plot updated

--- a/p8105_hw2_jc4166.Rmd
+++ b/p8105_hw2_jc4166.Rmd
@@ -24,6 +24,7 @@ mr_trash_wheel_data = read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xl
 ```
 
 Precipitation data for 2017 and 2018 were read and cleaned, omitting rows without precipitation data and adding a variable "year". Then, the 2017 and 2018 precipitation datasets were combined, and "month" was converted to a character variable.
+
 ```{r}
 library(readxl)
 precipitation_2017_data = read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", sheet = "2017 Precipitation", range = "A2:B14") %>% 
@@ -41,16 +42,9 @@ precipitation_17_18_combined_data =
   mutate(month = month.name[month])
 ```
 
-```{r eval = FALSE}
-median_2017= 
-  filter(mr_trash_wheel_data, year == "2017")
-
-median_2017_sports_balls = 
-  median(pull(median_2017, sports_balls))
-```
-The "mr_trash_wheel_data" summarizes the types of objects that are collected by Mr. Trash Wheel. The key variables for the Mr. Trash Wheel sheet include the weight (tons), volume (cubic yards), and number of specific items (e.g. plastic bottles and grocery bags). For example, in 2017, `r median_2017_sports_balls` was the median number of sports balls collected.
-
 The "precipitation_17_18_combined_data" dataset summarizes precipitation in inches for each month of 2017 and 2018. The total precipitation for 2017 `r sum(pull(precipitation_2017_data, total))` and for 2018 is `r sum(pull(precipitation_2018_data, total))` inches. 
+
+
 
 ## Problem 2
 Data from "pols-month.csv" was read in and cleaned.
@@ -170,6 +164,11 @@ male_wnh_2016 = baby_names_tidy %>%
 Plot of male_wnh_2016 data.
 ```{r eval = FALSE}
 ggplot(male_wnh_2016, aes(x = rank, y = count)) + 
-  geom_point()
+  geom_point() +
+  labs(
+    title = "Rankings of Baby Names with Corresponding Counts",
+    x = "Overall Rank (out of 100)",
+    y = "Count"
+  )
 ```
 
