--- a/p8105_hw2_jc4166.md
+++ b/p8105_hw2_jc4166.md
@@ -43,14 +43,6 @@ precipitation_17_18_combined_data =
   mutate(month = month.name[month])
 ```
 
-``` r
-median_2017= 
-  filter(mr_trash_wheel_data, year == "2017")
-
-median_2017_sports_balls = 
-  median(pull(median_2017, sports_balls))
-```
-
 The “precipitation\_17\_18\_combined\_data” dataset summarizes
 precipitation in inches for each month of 2017 and 2018. The total
 precipitation for 2017 32.93 and for 2018 is 70.33 inches.
@@ -202,5 +194,10 @@ Plot of male\_wnh\_2016 data.
 
 ``` r
 ggplot(male_wnh_2016, aes(x = rank, y = count)) + 
-  geom_point()
+  geom_point() +
+  labs(
+    title = "Rankings of Baby Names with Corresponding Counts",
+    x = "Overall Rank (out of 100)",
+    y = "Count"
+  )
 ```
