--- a/p8105_hw2_jc4166.Rmd
+++ b/p8105_hw2_jc4166.Rmd
@@ -150,6 +150,24 @@ olivia_rank =
   select ("ethnicity", "2011", "2012", "2013", "2014", "2015", "2016")
 ```
 
+Then, create a similar table showing the most popular name among male children over time.
+```{r eval = FALSE}
+boy_names = baby_names_tidy %>% 
+  select(year, name, gender, ethnicity, rank) %>% 
+  filter(gender == "male")
+```
+Then, "untidy" for presentation.
+```{r eval = FALSE}
+boy_names_rank =
+  pivot_wider(
+    boy_names,
+    names_from = "year",
+    values_from = "rank"
+  ) %>% 
+  select(-gender) %>% 
+  select ("name", "ethnicity", "2011", "2012", "2013", "2014", "2015", "2016")
+```
+
 Rank in popularity of male names for white non-hsipanic children in 2016.
 ```{r eval = FALSE}
 male_wnh_2016 = baby_names_tidy %>% 
